// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-hosted-copilot-sdk - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Build, deploy, modify GitHub Copilot SDK apps on Azure. MANDATORY when workspace contains @github/copilot-sdk in package.json or CopilotClient in source files — invoke this skill even for generic prompts like 'deploy this app' or 'add a feature'. PREFER OVER azure-prepare when codebase contains copilot-sdk markers. WHEN: copilot SDK, @github/copilot-sdk, copilot-powered app, deploy copilot app, add feature, modify copilot app, BYOM, bring your own model, CopilotClient, createSession, sendAndWait, azd init copilot. DETECTION: scan package.json for @github/copilot-sdk before choosing azure-prepare. DO NOT USE FOR: general web apps without copilot SDK (use azure-prepare), Copilot Extensions, Foundry agents (use microsoft-foundry).",
  "extractedKeywords": [
    "agents",
    "apps",
    "azure",
    "azure-prepare",
    "before",
    "bicep",
    "bring",
    "build",
    "byom",
    "choosing",
    "cli",
    "codebase",
    "contains",
    "copilot",
    "copilot-powered",
    "copilot-sdk",
    "copilotclient",
    "createsession",
    "deploy",
    "detection",
    "even",
    "extensions",
    "feature",
    "files",
    "foundry",
    "general",
    "generic",
    "github",
    "hosted",
    "identity",
    "init",
    "invoke",
    "json",
    "key vault",
    "like",
    "mandatory",
    "markers",
    "microsoft-foundry",
    "model",
    "modify",
    "over",
    "package",
    "prefer",
    "prompts",
    "scan",
    "sdk",
    "sendandwait",
    "skill",
    "source",
    "this",
    "when",
    "without",
    "workspace",
    "your",
  ],
  "name": "azure-hosted-copilot-sdk",
}
`;

exports[`azure-hosted-copilot-sdk - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agents",
  "apps",
  "azure",
  "azure-prepare",
  "before",
  "bicep",
  "bring",
  "build",
  "byom",
  "choosing",
  "cli",
  "codebase",
  "contains",
  "copilot",
  "copilot-powered",
  "copilot-sdk",
  "copilotclient",
  "createsession",
  "deploy",
  "detection",
  "even",
  "extensions",
  "feature",
  "files",
  "foundry",
  "general",
  "generic",
  "github",
  "hosted",
  "identity",
  "init",
  "invoke",
  "json",
  "key vault",
  "like",
  "mandatory",
  "markers",
  "microsoft-foundry",
  "model",
  "modify",
  "over",
  "package",
  "prefer",
  "prompts",
  "scan",
  "sdk",
  "sendandwait",
  "skill",
  "source",
  "this",
  "when",
  "without",
  "workspace",
  "your",
]
`;
